fix(components): [GuestsRooomsPicker] add style overflow auto

--- a/src/components/GuestsRoomsPicker.css
+++ b/src/components/GuestsRoomsPicker.css
@@ -4,6 +4,7 @@
   background: white;
   padding: 16px;
   user-select: none;
+  overflow: auto;
 }
 
 .title {
